adding passkey auth and troubleshooting pqassword reset/registration
